<resources>
    <string name="back_content_description">Назад</string>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <!--  Messages  -->
    <string name="praktikum_andoid_dev_url" translatable="false">https://practicum.yandex.ru/android-developer</string>
    <string name="praktikum_andoid_dev_term_of_use" translatable="false"> https://yandex.ru/legal/practicum_offer</string>
    <string name="write_to_support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_email" translatable="false">yachmenyov.igor@yandex.ru</string>
    <string name="write_to_support_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="track_album_cover">Обложка альбома</string>
    <string name="no_description">без описания</string>
    <string name="example_text_3" translatable="false">Lorem ipsum dolor</string>
    <string name="example_text_4" translatable="false">Lorem ipsum dolor sit</string>
    <string name="example_text_duration" translatable="false">6:15</string>
    <string name="more_detailed">Подробнее</string>
    <string name="example_text_very_long" translatable="false">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</string>
    <string name="search_clear_description">очистить поиск</string>
    <string name="search_no_found">Ничего не нашлось</string>
    <string name="search_no_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="you_were_looking_for">Вы искали</string>
    <string name="example_text_track_name" translatable="false">Yesterday (Remastered 2009)</string>
    <string name="example_text_artist_name" translatable="false">The Beatles </string>
    <string name="example_text_play_time" translatable="false">00:00</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <!--  Player  -->
    <string name="track_duration_title">Длительность</string>
    <string name="track_album_title">Альбом</string>
    <string name="track_release_date_title">Год</string>
    <string name="track_genre_title">Жанр</string>
    <string name="track_country_title">Страна</string>
    <string name="player_play_description">Играть</string>
    <string name="player_add_to_playlist_description">Добавить в плейлист</string>
    <string name="player_add_to_favorites_description">Добавить в избранное</string>
    <string name="network_error_message">Произошла сетевая ошибка</string>

    <!--  Library  -->
    <string name="message_empty_library">Ваша медиатека пуста</string>
    <string name="message_empty_playlist_list">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="action_1">"Действие 1</string>
    <string name="featured_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlist_cover">Обложка плейлиста</string>
    <string name="required_name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>

    <!--  Dialogs  -->
    <string name="question_finish_creating_playlist_title">Завершить создание плейлиста?</string>
    <string name="question_finish_creating_playlist_message">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>

    <!-- Example -->
    <string name="playlist_name_example" translatable="false">Best songs 2021</string>
    <string name="playlist_description_example" translatable="false">2022</string>
    <string name="playlist_duration_example">10000300 минут</string>
    <string name="playlist_tracks_quantity_example">98 треков</string>
    <string name="delete_track">Удалить трек</string>
    <string name="question_sure_remove_track_from_playlist">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete">Удалить</string>
    <string name="no_tracklist_in_playlist_shared">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="question_sure_delete_playlist">Хотите удалить плейлист %1?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>

    <!-- Declension -->
    <string name="minute">минута</string>
    <string name="minutes">минуты</string>
    <string name="minutes_genitive">минут</string>

    <string name="track">трек</string>
    <string name="track_genitive">трека</string>
    <string name="tracks_genitive">треков</string>

    <string name="playlist_is_empty">Плейлист пустой</string>


</resources>