<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/panelHeader"
        style="@style/PanelHeader">

        <Button
            android:id="@+id/exitBtn"
            style="@style/PanelIcon"
            android:contentDescription="@string/back_content_description"
            app:icon="@drawable/arrow_back" />

        <TextView
            style="@style/PanelTitle"
            android:text="@string/settings"/>
    </LinearLayout>

    <Switch
        android:id="@+id/switchNightMode"
        style="@style/MenuItem"
        android:paddingEnd="@dimen/menu_text_icon_padding"
        android:text="@string/dark_theme"
        tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/shareApp"
        style="@style/MenuItem"
        android:text="@string/share_app"
        app:icon="@drawable/share" />

    <Button
        android:id="@+id/writeToSupport"
        style="@style/MenuItem"
        android:text="@string/write_to_support"
        app:icon="@drawable/support" />

    <Button
        android:id="@+id/termsOfUse"
        style="@style/MenuItem"
        android:text="@string/terms_of_use"
        app:icon="@drawable/arrow_left" />

</LinearLayout>