<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        android:id="@+id/panelHeader"
        style="@style/PanelHeader">

        <TextView
            style="@style/PanelTitle"
            android:text="@string/settings" />
    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        style="@style/SwitchMenuItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingEnd="@dimen/menu_text_icon_padding"
        android:text="@string/dark_theme"
        tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/shareApp"
        style="@style/MenuItem"
        android:drawableRight="@drawable/share"
        android:text="@string/share_app" />

    <Button
        android:id="@+id/writeToSupport"
        style="@style/MenuItem"
        android:drawableRight="@drawable/support"
        android:text="@string/write_to_support" />

    <Button
        android:id="@+id/termsOfUse"
        style="@style/MenuItem"
        android:drawableRight="@drawable/arrow_left"
        android:text="@string/terms_of_use" />

</LinearLayout>