<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tool="http://schemas.android.com/tools"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal">
        
        <ImageView
            android:id="@+id/artwork"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/track_placeholder"
            android:contentDescription="@string/track_album_cover" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/artistName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tool:text="@string/example_text_4"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/trackName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/example_text_3"
                    android:gravity="center_vertical"/>

                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ellipse_1"
                    android:contentDescription="@string/no_description" />

                <TextView
                    android:id="@+id/trackTime"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/example_text_duration"
                    android:gravity="center_vertical"/>


            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="12dp"
            android:paddingHorizontal="8dp"
            android:paddingVertical="5dp"

            android:src="@drawable/arrow_left"
            />

    </LinearLayout>
</androidx.cardview.widget.CardView>