<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/primary_title_margin_botom"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/primary_text_size" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/medium_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textColor="@color/black"
        android:textSize="@dimen/primary_text_size"
        app:cornerRadius="@dimen/primary_btn_radius"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/primary_icon_padding"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/btnLibrary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/medium_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/library"
        android:textColor="@color/black"
        android:textSize="@dimen/primary_text_size"
        app:cornerRadius="@dimen/primary_btn_radius"
        app:icon="@drawable/media_library"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/primary_icon_padding"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/medium_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="@dimen/primary_text_size"
        app:cornerRadius="@dimen/primary_btn_radius"
        app:icon="@drawable/setting"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/primary_icon_padding"
        app:iconTint="@color/black" />

</LinearLayout>