<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/panelHeader"
        style="@style/PanelHeader"
        android:layout_marginBottom="0dp">

        <Button
            android:id="@+id/exitBtn"
            style="@style/PanelIcon"
            android:contentDescription="@string/back_content_description"
            app:icon="@drawable/arrow_back" />

        <TextView
            style="@style/PanelTitle"
            android:text="@string/search" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        android:theme="@style/Theme.PlaylistMaker.SearchBox">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center_vertical"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="8dp"
            android:background="@null"
            android:src="@drawable/search"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/searchTextEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@null"
            android:hint="@string/search"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/search_text_color"
            android:textCursorDrawable="@null" />

        <ImageButton
            android:id="@+id/clearSearchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:background="@null"
            android:contentDescription="@string/search_clear_description"
            android:src="@drawable/ic_close"
            android:visibility="gone" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trackListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


</LinearLayout>